--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-"\Sny pro enhancement lucidní paměti"
-"\Interesting thoughts"
-"\HTB"
-"\picoCTF"
+/Sny\ pro\ enhancement\ lucidní\ paměti
+/Interesting\ thoughts
+/HTB
+/picoCTF
